# src/openapi/courts/paths.yaml
@@ -168,3 +168,44 @@
         $ref: '#/components/responses/NotFound'
       500:
         $ref: '#/components/responses/InternalServerError'
+  put:
+    tags:
+      - Courts 🎾
+    summary: Update an existing court ✏️
+    description: |
+      Updates the details of an existing court in the RacketOnDeck platform. This endpoint allows an authenticated
+      user to modify the name, surface type, indoor/outdoor status, sport, and current status of the specified court.
+    x-eov-operation-handler: courtController
+    operationId: update
+    parameters:
+      - name: academyId
+        in: path
+        required: true
+        description: The unique identifier (UUID) of the academy to which the court belongs.
+        schema:
+          type: string
+          format: uuid
+          example: '450e8400-e29b-41d4-a716-446655440111'
+      - name: courtId
+        in: path
+        required: true
+        description: The unique identifier (UUID) of the court to update.
+        schema:
+          type: string
+          format: uuid
+          example: '550e8400-e29b-41d4-a716-446655440222'
+    requestBody:
+      $ref: '#/components/requestBodies/CourtPutRequestBody'
+    responses:
+      200:
+        $ref: '#/components/responses/CourtUpdated'
+      400:
+        $ref: '#/components/responses/BadRequest'
+      401:
+        $ref: '#/components/responses/Unauthorized'
+      403:
+        $ref: '#/components/responses/Forbidden'
+      404:
+        $ref: '#/components/responses/NotFound'
+      500:
+        $ref: '#/components/responses/InternalServerError'
